# Spotiamp

./: LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: build.yaml  publish.yaml
src/: NumberDisplay.svelte  TextTicker.svelte  app.html  common.css  common.js  index.html  main.js  package-lock.json  package.json  player.css  player.html  player.js  playlist.css  playlist.html  playlist.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  external.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_window.rs  lib.rs  main.rs  oauth.rs  player_window.rs  playlist_window.rs  settings.rs  sink.rs  spotify.rs  visualizer.rs
src/lib/: common.js  common.svelte.js  events.svelte.js  playlist.svelte.js  spotify.svelte.js  spotifyTrack.js  visualizer.svelte.js  window-docking.svelte.js  windowChannel.js
src/routes/: +layout.svelte  global.css
src/routes/player/: +page.js  +page.svelte
src/routes/playlist/: +page.js  +page.svelte
