[package]
name = "spotiamp"
version = "0.1.0"
description = "Spotify in Winamp Classic"
authors = ["Ted Steen"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotiamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
librespot = "0.5"

oauth2 = "4.4"
axum = "0.7"
tokio = "1.40"
url = "2.2"
directories = "5.0"
tauri-plugin-dialog = "2.0"
