[package]
name = "spotiamp"
version = "0.3.1"
description = "Spotify in Winamp Classic"
authors = ["Ted Steen"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotiamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

thiserror = "2"
log = "0.4"
env_logger = "0.11"
librespot = "0.6"
audioviz = { version = "0.6", features = ["processor"] }
ringbuffer = "0.15"

oauth2 = "5.0"
rustls = "0.23"
axum = "0.8"
tokio = "1.44"
url = "2.5"
directories = "6.0"
tauri-plugin-dialog = "2.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
