[package]
name = "spotiamp"
version = "0.5.1"
description = "Spotify in Winamp Classic"
authors = ["Ted Steen"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotiamp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-depricated"

thiserror = "2"
log = "0.4"
env_logger = "0.11"
librespot = { version = "0.8", default-features = false, features = ["rodio-backend", "rustls-tls-native-roots"] }
audioviz = { version = "0.6", default-features = false, features = ["spectrum"] }

oauth2 = "5.0"
rustls = "0.23"
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"] }
tokio = { version = "1.48", default-features = false, features = ["net", "sync"] }
url = "2.5"
directories = "6.0"
tauri-plugin-dialog = "2.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSGraphics", "NSWindow"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.

# NOTE: This causes a crash at startup around audio. Not sure why
# opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.

panic = "abort" # Higher performance by disabling panic handlers.
strip = true    # Ensures debug symbols are removed.
